<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.watchdogs.mtestmapa.registro"
    tools:showIn="@layout/activity_registro"
    android:background="@mipmap/walll">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Registro"
            android:id="@+id/textView9"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="40dp" />


        <ImageView
            android:layout_width="143dp"
            android:layout_height="163dp"
            android:id="@+id/foto"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/icono" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editcorreo"
            android:layout_gravity="center_horizontal"
            android:hint="@string/correo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editcontraseña"
            android:layout_gravity="center_horizontal"
            android:hint="@string/contraseña2" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editnombre"
            android:hint="@string/hint_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editedad"
            android:hint="@string/edad" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editsexo"
            android:hint="@string/sexo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edittelefono"
            android:hint="@string/telefono" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Acceder"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Guardar Registro"
            android:id="@+id/botonguardar"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    </ScrollView>

</LinearLayout>
